--- a/vercel.json
+++ b/vercel.json
@@ -4,3 +4,14 @@
   ],
   "routes": [{ "src": "/(.*)", "dest": "/" }]
 }
+
+
+{
+  "builds": [
+    { "src": "package.json", "use": "@vercel/static-build", "config": { "distDir": "build" } }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/" }
+  ]
+}
+
